[package]
name = "clever-graphics"
version = "0.1.1"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"
description = "Core graphics, designed to run on a thread pool"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/notgull/clever-graphics#readme"
repository = "https://github.com/notgull/clever-graphics"

[dependencies]
core-graphics = "0.22"
objc = "0.2"
objc_exception = "0.1"
orphan-crippler = "0.1.2"

[features]
parking_lot = ["orphan-crippler/parking_lot"]
